# lg-tgbot

./: CMakeLists.txt  README.md  installer.sh
.github/workflows/: build.yaml
include/: BlockingQueue.h  Log.h
src/: Log.cpp  agent.cpp  lg-tgbot.cpp
